feat(cli): add agent-native json envelope, tool registry, and health
- Implement {ok, data, meta} / {ok, error, meta} envelope contract on
  stdout for all json output; errors include code, message, and hint
- Add tool registry (~55 tools) with ToolMeta/ParamMeta; expose via
  cho tools [name] --json for agent capability discovery
- Add cho health --json readiness gate checking config, auth, tenant,
  and keyring; returns ready/degraded/blocked with exit code 2 on block
- Add --json flag as shorthand for --format json; deprecate --meta
- Refactor CliContext to emit_success/emit_list/emit_items pattern that
  threads tool name and timing through the envelope automatically
- Add ErrorCode::hint() with actionable recovery strings and
  is_blocking() for exit code 2 on blocking errors
- Add tool_name() and Instant timing to all command dispatch functions
- Extract shared CLI utilities (read_json_file, validate_date) to utils
- Fix pascal_to_snake to index chars[] instead of repeated .nth() calls
- Fix money_to_strings to avoid f64 intermediate for precision safety
- Fix table truncation for utf-8 safe boundary detection
- Remove dead table helper functions
- Update build script to copy binary to CHO_HOME
- Add integration tests for envelope, tools, health, error contracts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"init---------------------------------": "",
 		"prepare": "husky",
 		"build--------------------------------": "",
-		"build": "cargo build --workspace --release",
+		"build": "cargo build --workspace --release && mkdir -p \"${CHO_HOME:-${TOOLS_HOME:-$HOME/.tools}/cho}\" && cp target/release/cho \"${CHO_HOME:-${TOOLS_HOME:-$HOME/.tools}/cho}/cho\"",
 		"cho:dev": "cargo run -p cho-cli --",
 		"cho": "./target/release/cho",
 		"check--------------------------------": "",
